Use ConcurrentMap.computeIfAbsent and optimize list vs. array use